# django-docker-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
my_django_project/: settings.py
