[tool.isort]
profile = "black"

[tool.poetry]
name = "my_project_name"
version = "0.1.0"
description = "Django docker template."
authors = ["mickeybeurskens <mickeybeurskens@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
